Change Gmail SMTP username and password
Updated email credentials for Gmail SMTP configuration.

--- a/ems/src/main/resources/application.properties
+++ b/ems/src/main/resources/application.properties
@@ -16,8 +16,8 @@ spring.jpa.show-sql=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pankajsiracademy2035@gmail.com
-spring.mail.password=plbv vvoz zvgh grrd
+spring.mail.username=xxxxxxxxxxxxx@gmail.com
+spring.mail.password=plbv vvoz zvgh grxd
 
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
